--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn"><a href="https://drive.google.com/file/d/1NeRNeoZzcS1qeQ-OZ_UJ-tZz5eALlA3G/view?usp=sharing" target="_blank">Download CV <i class="uil uil-file-alt"></i></a></button>
+            <button class="btn"><a href="https://drive.google.com/file/d/1GJQy8er6WEGFNmMBSoGvjhNzp-6tpCo1/view?usp=sharing" target="_blank">Download CV <i class="uil uil-file-alt"></i></a></button>
         </div>
         <div class="nav-menu-btn">
             <i class="uil uil-bars" onclick="myMenuFunction()"></i>
@@ -59,8 +59,10 @@
                 </p>
             </div>
             <div class="featured-text-btn">
-                <button class="btn blue-btn"><a href="#cotact">Hire Me</a></button>
-                <button class="btn"><a href="https://drive.google.com/file/d/1NeRNeoZzcS1qeQ-OZ_UJ-tZz5eALlA3G/view?usp=sharing" target="_blank">Resume! <i class="uil uil-file-alt"></i></a></button>
+                <button class="btn blue-btn">
+                    <a href="mailto:alikambar9125@gmail.com">Hire Me</a>
+                </button>
+                <button class="btn"><a href="https://drive.google.com/file/d/1GJQy8er6WEGFNmMBSoGvjhNzp-6tpCo1/view?usp=sharing" target="_blank">Resume! <i class="uil uil-file-alt"></i></a></button>
             </div>
             <div class="social_icons">
                 <div class="icon">
@@ -74,8 +76,8 @@
                     </a>
                 </div>
                 <div class="icon">
-                    <a href="https://www.instagram.com/__account_.deactivated__" target="_blank">
-                        <i class="uil uil-instagram"></i>
+                    <a href="mailto:alikambar9125@gmail.com" target="_blank">
+                        <i class="uil uil-envelope"></i>
                     </a>
                 </div>
                 
@@ -112,7 +114,7 @@
                     <p>I am a skilled front-end developer with a strong background in creating responsive, visually appealing web applications. Proficient in HTML, CSS, JavaScript, and ReactJS, I excel in translating design concepts into functional and user-friendly interfaces. My experience includes building and optimizing websites for startups, focusing on delivering seamless user experiences and enhancing overall site performance. With a keen eye for detail and a passion for innovation, I am dedicated to pushing the boundaries of front-end development to create impactful digital solutions.
                     </p>
                     <div class="about-btn">
-                        <button class="btn"><a href="https://drive.google.com/file/d/1NeRNeoZzcS1qeQ-OZ_UJ-tZz5eALlA3G/view?usp=sharing" target="_blank">Download CV <i class="uil uil-import"></i></a></button>
+                        <button class="btn"><a href="https://drive.google.com/file/d/1GJQy8er6WEGFNmMBSoGvjhNzp-6tpCo1/view?usp=sharing" target="_blank">Download CV <i class="uil uil-import"></i></a></button>
                     </div>
                 </div>
             </div>
@@ -189,7 +191,7 @@
         <div class="footer-social-icons">
             <div class="icon"><a href="https://github.com/kambar-ali" target="_blank"><i class="uil uil-github"></i></a></div>
             <div class="icon"><a href="https://www.linkedin.com/in/kambar-ali-zaidi/" target="_blank"><i class="uil uil-linkedin-alt"></i></a></div>
-            <div class="icon"><a href="https://instagram.com/__account_.deactivated__" target="_blank"><i class="uil uil-instagram"></i></a></div>
+            <div class="icon"><a href="mailto:alikambar9125@gmail.com" target="_blank"><i class="uil uil-envelope"></i></a></div>
             <div class="icon"><a href="https://wa.me?+919125241370" target="_blank"><i class="uil uil-whatsapp-alt"></i></a></div>
         </div>
         <div class="bottom-footer">
